Web Inspector: Remove undocked-title-area element since inspector already adjusts based on safeAreaInsets rdar://149898806 https://bugs.webkit.org/show_bug.cgi?id=292205
Reviewed by Devin Rousso and BJ Burg.

The patch https://github.com/WebKit/WebKit/pull/43779 made Web Inspector
automatically adjust its visible area based on the WKInspectorWKWebView's
safeAreaInsets, which natively computes the margins on all four edges
that are blocked by other view elements. That patch introduced a
regression that the undocked Web Inspector started to have an extra
white space on the top under the title bar, which we then fixed in https://github.com/WebKit/WebKit/pull/44438.
However, it turns out safeAreaInsets already includes the title bar's
height, so there is actually no need for the undocked-title-area element
anymore as the auto-adjustment already does the job well.

Note that dragging the title bar to move the window is an effect handled
by the window natively. By removing the undocked-title-area and thus a
call to WI.moveUndockedWindowMouseDown, we're letting the window itself
handle the drag to move instead. This preserves the normal dragging
behavior, and I tested that manually.

* Source/WebInspectorUI/UserInterface/Base/Main.js:
* Source/WebInspectorUI/UserInterface/Main.html:
* Source/WebInspectorUI/UserInterface/Views/Main.css:
(#main):
(#undocked-title-area): Deleted.
(body.mac-platform #undocked-title-area): Deleted.
(body:not(.mac-platform) #undocked-title-area): Deleted.
(body.docked #undocked-title-area): Deleted.
(body.window-inactive #undocked-title-area): Deleted.
(@media (prefers-color-scheme: dark) #undocked-title-area): Deleted.
(@media (prefers-color-scheme: dark) body.mac-platform #undocked-title-area): Deleted.
(@media (prefers-color-scheme: dark) body:not(.mac-platform) #undocked-title-area): Deleted.
(@media (prefers-color-scheme: dark) body.mac-platform.window-inactive #undocked-title-area): Deleted.
(@media (prefers-color-scheme: dark) body:not(.m

--- a/Source/WebInspectorUI/UserInterface/Views/Variables.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Variables.css
@@ -196,7 +196,6 @@
     /* Invert colors yet preserve the hue */
     --filter-invert: invert(100%) hue-rotate(180deg);
 
-    --undocked-title-area-height: 0px;
     --tab-bar-height: var(--navigation-bar-height);
     --navigation-bar-height: 29px;
 
@@ -433,10 +432,5 @@ body {
             --border-color: hsl(0, 0%, 30%);
             --border-color-secondary: hsl(0, 0%, 24%);
         }
-    }
-
-    /* Only needed by the Mac port, keep in sync with `WI.undockedTitleAreaHeight` */
-    &.mac-platform:not(.docked) {
-        --undocked-title-area-height: calc(27px / var(--zoom-factor));
     }
 }
